[gd_scene load_steps=15 format=2]

[ext_resource path="res://GFX/Enemies/blueshell_falling.png" type="Texture" id=1]
[ext_resource path="res://Scripts/General/Generic/AliveObject.gd" type="Script" id=2]
[ext_resource path="res://GFX/Enemies/parablue.png" type="Texture" id=3]
[ext_resource path="res://Scripts/AI/BlueParatroopa.gd" type="Script" id=4]
[ext_resource path="res://Sounds/Main/kick.wav" type="AudioStream" id=5]
[ext_resource path="res://Prefabs/Blocks/IceBlock.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Sounds/Main/stomp.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "falling",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23, 23 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14, 2 )

[node name="Paratroopa Blue" type="KinematicBody2D" groups=["Enemy"]]
script = ExtResource( 2 )
vars = {
"bounce": 9.0,
"jump_strength": 550,
"speed": 50.0
}
AI = ExtResource( 4 )
can_freeze = true
sound_pth = NodePath("Stomp")
alt_sound_pth = NodePath("Kick")
animated_sprite_pth = NodePath("Sprite")
frozen_sprite_pth = NodePath("IceSprite")

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
rect = Rect2( -16, -48, 32, 48 )
process_parent = true
physics_process_parent = true

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="Collision2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -24 )
shape = SubResource( 7 )
disabled = true

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
playing = true
offset = Vector2( 0, -24 )
flip_h = true

[node name="Kick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sounds"

[node name="Stomp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Sounds"

[node name="KillZone" type="Area2D" parent="."]
visible = false
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2( 0, -16 )
shape = SubResource( 5 )
disabled = true

[node name="KillDetector" type="Area2D" parent="."]
visible = false

[node name="Collision" type="CollisionShape2D" parent="KillDetector"]
position = Vector2( 0, 4 )
shape = SubResource( 6 )

[node name="IceSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -24 )
frames = ExtResource( 6 )
animation = "medium"
